trunk/Archive2/f0/31fbfaa1843c0e/output
main.cpp: In function 'void vlad(double*)':
main.cpp:4:6: error: redefinition of 'void vlad(double*)'
 void vlad(double[5]) {}
      ^
main.cpp:3:6: error: 'void vlad(double*)' previously defined here
 void vlad(double*) {}
      ^
