trunk/Archive2/f0/31fbfaa1843c0e/main.cpp
#include <iostream>

void vlad(double*) {}
void vlad(double[5]) {}

int main() {}